test/compile-fail/resolution/use/super/expected.txt
error: special identifier `super` can only be in the start position of a path
  ┌─ ./test/compile-fail/resolution/use/super/top.rhdl:2:8
  │
2 │ use a::super;
  │        ^^^^^

